# Sim2Real-Track4

./: .gitignore  README.md  pyproject.toml
dataset/: search_dataset.py
docs/: challenge-track4.md  lhp-uit-notes.md  rules-do-and-dont.md  vlm-rerank-plan.md
docs/papers/Beyond Walking: A Large-Scale Image-Text Benchmark for Text-based Person Anomaly Search/: script.md
docs/papers/Hybrid, Unified and Iterative: A Novel Framework for Text-based Person Anomaly Retrieval/: script.md
docs/superpowers/plans/: 2026-06-22-lhp-retriever-module.md  (+7 more)
lhp/: README.md  beit3_loader.py  config.yaml  dataset.py  eval.py  infer.py  masked_model.py  model.py  rerank_eval.py  tokenization.py  train.py  transform.py
lhp/beit3/: utils.py
lhp/tests/: test_dataset.py  test_eval.py  test_import_model.py  test_masked_model.py  test_rerank_eval.py  test_tokenization.py  test_transform.py
mllm_rerank/: README.md  __init__.py  cgcr.py  cgcr_config.yaml  cgcr_gate.py  cgcr_prompts.py  cgcr_squad.py  claims.py  cmp_features.py  config.yaml  fusion.py  metrics.py  mllm.py  prompts.py  rerank.py  run.sh  run_cgcr.sh  squad.py
models/: masked_swin.py  swin_transformer.py  uit.py
tests/: test_cgcr_claims.py  test_cgcr_fusion_wiring.py  test_cgcr_gate.py  test_cgcr_prompts.py  test_cgcr_squad.py  test_itc_gather.py  test_masked_swin.py  test_mim.py  test_mllm_cmp_features.py  test_mllm_fusion.py  test_mllm_metrics.py  test_mllm_no_cross_import.py  test_mllm_prompts.py  test_mllm_squad.py  test_mllm_wrapper.py  test_xvlm_init.py
uit/: config.yaml  train.py  xvlm_init.py
(+9 files in other folders)
